--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,6 +7,23 @@ body
     margin: 0;
     padding: 0;
 }
+#cabecera
+{
+    background: #33a;
+    color: white;
+    margin: 0;
+    padding: 0.5em;
+    font-weight: bold;
+    box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.75);
+}
+#cabecera #tagline
+{
+    font-weight: normal;
+    font-size: 0.8em;
+    margin: 0 0 0 1em;
+}
+
+
 #container
 {
     width: 70%;
