--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,13 +1,10 @@
 body
 {
-    text-align: left;
+    background: #1e1f24;
+    text-align: center;
     font-family: "Arial";
     font-size: 16px;
-<<<<<<< HEAD
-    color:blue;
-=======
-    color: red;
->>>>>>> cabecera
+    color: #333;
     margin: 0;
     padding: 0;
 }
@@ -19,6 +16,12 @@ body
     padding: 0.5em;
     font-weight: bold;
     box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.75);
+}
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
+
 }
 #cabecera #tagline
 {
@@ -39,4 +42,9 @@ body
 #container h1
 {
     font-size: 20px;
+}
+#post
+{
+    background: white;
+    padding: 1em;
 }
